# viewTrain

./: .dockerignore  .env  .env-example  .gitignore  Dockerfile  Jenkinsfile  README.md  add_question_type_column.py  clear_users.py  db_alter_script.py  deploy.sh  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  test_user_profile.py  viewtrain.service
.github/workflows/: .deploy.yml.swp  deploy.yml
app/: config.py  exceptions.py  main.py
app/auth/: auth.py  dao.py  dependencies.py  init_data.py  models.py  router.py  schemas.py
app/core/: config.py
app/dao/: base.py  database.py  session_maker.py
app/directions/: router.py
app/history/: dao.py  router.py  schemas.py
app/interview/: dao.py  models.py  router.py  schemas.py
app/languages/: router.py
app/migration/: env.py
app/migration/versions/: 54567630096f_initial_migration.py  8b610f2cc994_add_direction_and_language_models.py  b57adb3d2a66_a.py
app/migrations/: env.py
app/migrations/versions/: 1a8ce7aee925_aaa.py  1c6d7302b37f_add_hashed_password_column_to_users_.py  2fa87577e89f_initial.py  32a8c1b7a322_add_current_question_id_to_interviews.py  584e7b9763a8_initial_migration.py  67d8b2e1965e_add_phone_field_to_users.py  6b6aabeb13de_remove_password_column.py  904ecf8ebd53_create_interview_tables.py  cleanup_users_table.py  (+12 more)
app/services/: Parser.py  gigachat.py
app/statistics/: __init__.py  dao.py  router.py  schemas.py
scripts/: wait-for-db.sh
tests/: conftest.py  test_auth.py  test_directions.py  test_history.py  test_interview.py  test_languages.py
