[project]
name = "interviewtraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi-versioning>=0.10.0",
    "fastapi[all]>=0.115.12",
    "gigachat>=0.1.39.post1",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "python-jose>=3.4.0",
    "typing>=3.10.0.0",
]
